@@ -1,7 +1,7 @@
-/************************************************************
+/****************************************************************************
  * wd_cancel.c
  *
- *   Copyright (C) 2007 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -14,7 +14,7 @@
  *    notice, this list of conditions and the following disclaimer in
  *    the documentation and/or other materials provided with the
  *    distribution.
- * 3. Neither the name Gregory Nutt nor the names of its contributors may be
+ * 3. Neither the name NuttX nor the names of its contributors may be
  *    used to endorse or promote products derived from this software
  *    without specific prior written permission.
  *
@@ -31,11 +31,11 @@
  * ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  *
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Included Files
- ************************************************************/
+ ****************************************************************************/
 
 #include <sys/types.h>
 #include <assert.h>
@@ -44,31 +44,31 @@
 #include "os_internal.h"
 #include "wd_internal.h"
 
-/************************************************************
+/****************************************************************************
  * Definitions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Private Type Declarations
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Global Variables
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Private Variables
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Private Functions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Public Functions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Function:  wd_cancel
  *
  * Description:
@@ -83,7 +83,7 @@
  *
  * Assumptions:
  *
- ************************************************************/
+ ****************************************************************************/
 
 STATUS wd_cancel (WDOG_ID wdid)
 {
@@ -130,17 +130,24 @@ STATUS wd_cancel (WDOG_ID wdid)
            * is being canceled, then it inherits the remaining ticks.
            */
 
-          if (curr->next) curr->next->lag += curr->lag;
+          if (curr->next)
+            {
+              curr->next->lag += curr->lag;
+            }
 
           /* Now, remove the watchdog from the timer queue */
 
           if (prev)
-            (void)sq_remafter((FAR sq_entry_t*)prev, &g_wdactivelist);
+            {
+              (void)sq_remafter((FAR sq_entry_t*)prev, &g_wdactivelist);
+            }
           else
-            (void)sq_remfirst(&g_wdactivelist);
+            {
+              (void)sq_remfirst(&g_wdactivelist);
+            }
           wdid->next = NULL;
 
-          /* If we made it this far, then we were successful */
+          /* Return success */
 
           ret = OK;
         }
