@@ -1,7 +1,7 @@
-/************************************************************
+/****************************************************************************
  * wd_delete.c
  *
- *   Copyright (C) 2007 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -14,7 +14,7 @@
  *    notice, this list of conditions and the following disclaimer in
  *    the documentation and/or other materials provided with the
  *    distribution.
- * 3. Neither the name Gregory Nutt nor the names of its contributors may be
+ * 3. Neither the name NuttX nor the names of its contributors may be
  *    used to endorse or promote products derived from this software
  *    without specific prior written permission.
  *
@@ -31,43 +31,47 @@
  * ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  *
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Included Files
- ************************************************************/
+ ****************************************************************************/
 
 #include <sys/types.h>
+
 #include <wdog.h>
 #include <queue.h>
+#include <errno.h>
+
 #include <nuttx/arch.h>
+
 #include "wd_internal.h"
 
-/************************************************************
+/****************************************************************************
  * Definitions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Private Type Declarations
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Global Variables
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Private Variables
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Private Functions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Public Functions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Function:  wd_delete
  *
  * Description:  
@@ -86,16 +90,31 @@
  *   The caller has assured that the watchdog is no longer
  *   in use.
  *
- ************************************************************/
+ ****************************************************************************/
 
 STATUS wd_delete(WDOG_ID wdId)
 {
   irqstate_t saved_state;
 
-  /* Check if the watchdog has been started. */
+  /* Verify that a valid watchdog was provided */
+
+  if (!wdId)
+    {
+      *get_errno_ptr() = EINVAL;
+      return ERROR;
+    }
+  /* The following steps are atomic... the watchdog must not be active when
+   * it is being deallocated.
+   */
 
   saved_state = irqsave();
-  if (wdId->active) wd_cancel(wdId);
+
+  /* Check if the watchdog has been started. */
+
+  if (wdId->active)
+    {
+      wd_cancel(wdId);
+    }
 
   /* Put the watchdog back on the free list */
 
